<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_detalle_participante"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription=""
        android:src="@drawable/adele" />

    <TextView
        android:id="@+id/titulo_nombre_participante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/edad"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            />


        <TextView
                android:id="@+id/espacio_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espacio_edad"
                android:textSize="16dp"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="120dp"
            />

        <TextView
            android:id="@+id/titulo_entrenador_par"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/entrenador"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />



        <TextView
            android:id="@+id/espacio_entrenador_par"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="30"
            android:text="@string/espacio_entrenador"
            android:textSize="16dp"
            android:visibility="visible"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="120dp"

            />

        <TextView
            android:id="@+id/titulo_ocupacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="ocupacion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/espacio_ocupacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="ocupacion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:layout_marginLeft="120dp"
            />



        <TextView
            android:id="@+id/titulo_url_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="100dp"
            android:text="@string/video"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/espacio_url_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="100dp"
            android:text="espacio en blanco"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:layout_marginLeft="120dp"
            />

        <TextView
            android:id="@+id/titulo_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="140dp"
            android:text="@string/estado"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/espacio_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="espacio en blanco"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="140dp"/>




    </FrameLayout>




</LinearLayout>