<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginTop="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_popup"
                android:id="@+id/textView" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cerrado" />
            <Button
                android:id="@+id/id_cerrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_cerrar" />

            <Button
                android:id="@+id/id_compartir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_compartir"
                android:onClick="irAFacebook"/>



        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

