<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_detalle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription=""
        android:src="@drawable/adele" />

    <TextView
        android:id="@+id/titulo_nombre_entrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:text="Nombre entrenador"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/titulo_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/genero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/genero_musical_entrenador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:layout_marginLeft="100dp" />



        <TextView
            android:id="@+id/titulo_historial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="50dp"
            android:text="@string/historial"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/historial_entrenador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="30"
                android:text="@string/texto_historial"
                android:textSize="16dp"
                android:visibility="visible" />


        </ScrollView>

        <Button
            android:id="@+id/btn_ir_participantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_participantes"
            android:layout_marginTop="180dp"
            android:layout_gravity="center_horizontal" />

    </FrameLayout>


</LinearLayout>